fix/rename broken css class

--- a/src/pages/Product/Product.scss
+++ b/src/pages/Product/Product.scss
@@ -67,7 +67,7 @@
 			padding-bottom: 20px;
 		}
 
-		.sales {
+		.saling {
 			font-family: "Poppins";
 			color: vars.$grayHeavy;
 			padding-bottom: 20px;
